name:                hs-gorira
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/aiya000/hs-gorira#readme
license:             BSD3
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop at gmail.com
copyright:           2016 aiya000
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hs-gorira
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       CmdOption
                     , Control.Config
                     , Control.GoriraDB
                     , Control.GoriraMeCab
                     , Data.Config
                     , Data.MyException
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , authenticate-oauth
                     , cmdargs
                     , connection
                     , containers
                     , directory
                     , either
                     , exceptions
                     , extra
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , regex-applicative-text
                     , regex-posix
                     , sentence-jp
                     , text
                     , transformers
                     , twi-high
                     , unix
